<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/Theme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/Theme.ToolBarStyle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:layout_gravity="center"
                        android:padding="@dimen/margin_small"
                        android:background="@drawable/cabibe"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center"
                        android:text="@string/app_description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:padding="@dimen/margin_small"
                        android:gravity="center"
                        android:text="About the Team"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/member_bernabe"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/member_calimag"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/member_dela_cruz"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/member_delesmo"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/member_tiglao"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_extra_small"
                        android:gravity="center_vertical"
                        android:text="@string/lorem_ipsum" />

                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>